docs(medusa-fulfillment-apiship): improve docs translation

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/getting-started/en.mdx
@@ -97,5 +97,5 @@ APISHIP_TOKEN=supersecret
 | `settings.defaultProductSizes.width` | Default product width. | No | – |
 | `settings.defaultProductSizes.height` | Default product height. | No | – |
 | `settings.defaultProductSizes.weight` | Default product weight. | No | – |
-| `settings.deliveryCostVat` | Delivery VAT rate:<br />- `-1` — No VAT<br />- `0` — 0%<br />- `5` — 5%<br />- `7` — 7%<br />- `10` — 10%<br />- `20` — 20% | Yes | – |
+| `settings.deliveryCostVat` | Delivery VAT rate:<br />- `-1` — No VAT<br />- `0` — 0%<br />- `5` — 5%<br />- `7` — 7%<br />- `10` — 10%<br />- `20` — 20%<br />- `22` — 22% | Yes | – |
 | `settings.isCod` | Enables Cash on Delivery (C.O.D.) for created orders. | No | `false` |
