--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/ru.mdx
@@ -9,13 +9,13 @@ description: "Плагин Medusa для фулфилмента через ApiSh
 
 ## Возможности
 
-- 🔗  **Seamless integration** with the Apiship logistics platform
-- 💰  **Real-time shipping rate calculation** directly in checkout
-- 📍  **Pickup point delivery** with list and interactive map selection
-- 🧾  **Automatic order creation** in Apiship with selected tariff and pickup point
-- 🏷️  **Shipment documents retrieval**, including labels and waybills
-- ⚙️  **Test mode** for simulating calculations  
-- 🔍  **Detailed logging** for monitoring, debugging, and support
+- 🔗  **Бесшовная интеграция** с логистической платформой Apiship  
+- 💰  **Расчёт стоимости доставки в реальном времени** прямо на этапе оформления заказа  
+- 📍  **Доставка в пункт выдачи** со списком ПВЗ и выбором на интерактивной карте  
+- 🧾  **Автоматическое создание заказа** в Apiship с выбранным тарифом и пунктом выдачи  
+- 🏷️  **Получение отгрузочных документов**, включая этикетки и накладные  
+- ⚙️  **Тестовый режим** для симуляции расчётов  
+- 🔍  **Подробное логирование** для мониторинга, отладки и поддержки
 
 ## 💬  Чат поддержки плагина ApiShip
 
