--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/getting-started/ru.mdx
@@ -85,17 +85,17 @@ APISHIP_TOKEN=supersecret
 
 | Параметр | Описание | Обязательный | По умолчанию |
 | --- | --- | --- | --- |
-| `token` | Apiship API token. | Yes | – |
-| `isTest` | Enables test mode for Apiship API requests. | No | `false` |
-| `settings` | Provider settings object. | Yes | – |
-| `settings.defaultSenderSettings.countryCode` | Sender country code. | Yes | – |
-| `settings.defaultSenderSettings.addressString` | Sender full address as a single string. | Yes | – |
-| `settings.defaultSenderSettings.contactName` | Sender contact full name. | Yes | – |
-| `settings.defaultSenderSettings.phone` | Sender contact phone number. | Yes | – |
-| `settings.connectionsMap` | Mapping of delivery provider keys to Apiship connection IDs. | No | – |
-| `settings.defaultProductSizes.length` | Default product length. | No | – |
-| `settings.defaultProductSizes.width` | Default product width. | No | – |
-| `settings.defaultProductSizes.height` | Default product height. | No | – |
-| `settings.defaultProductSizes.weight` | Default product weight. | No | – |
-| `settings.deliveryCostVat` | Delivery VAT rate:<br />- `-1` — No VAT<br />- `0` — 0%<br />- `5` — 5%<br />- `7` — 7%<br />- `10` — 10%<br />- `20` — 20% | Yes | – |
-| `settings.isCod` | Enables Cash on Delivery (C.O.D.) for created orders. | No | `false` |
+| `token` | API-токен Apiship. | Да | – |
+| `isTest` | Включение тестового режима для запросов к Apiship API. | Нет | `false` |
+| `settings` | Объект настроек провайдера. | Да | – |
+| `settings.defaultSenderSettings.countryCode` | Код страны отправителя. | Да | – |
+| `settings.defaultSenderSettings.addressString` | Полный адрес отправителя одной строкой. | Да | – |
+| `settings.defaultSenderSettings.contactName` | ФИО контактного лица отправителя. | Да | – |
+| `settings.defaultSenderSettings.phone` | Телефон контактного лица отправителя. | Да | – |
+| `settings.connectionsMap` | Сопоставление ключей провайдеров доставки с ID подключений в Apiship. | Нет | – |
+| `settings.defaultProductSizes.length` | Длина товара по умолчанию. | Нет | – |
+| `settings.defaultProductSizes.width` | Ширина товара по умолчанию. | Нет | – |
+| `settings.defaultProductSizes.height` | Высота товара по умолчанию. | Нет | – |
+| `settings.defaultProductSizes.weight` | Вес товара по умолчанию. | Нет | – |
+| `settings.deliveryCostVat` | Ставка НДС на доставку:<br />- `-1` — Без НДС<br />- `0` — 0%<br />- `5` — 5%<br />- `7` — 7%<br />- `10` — 10%<br />- `20` — 20%<br />- `22` — 22% | Да | – |
+| `settings.isCod` | Включение наложенного платежа (C.O.D.) для создаваемых заказов. | Нет | `false` |
