feat(medusa-fulfillment-apiship): update OpenAPI schema and docs

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/en.mdx
@@ -9,10 +9,10 @@ A Medusa plugin that provides ApiShip fulfillment.
 
 ## Features
 
-- 🔗  **Seamless integration** with the Apiship logistics platform
-- 💰  **Real-time shipping rate calculation** directly in checkout
+- ✅  **Complete integration** with ApiShip
+- 💰  **Shipping rate calculation** in checkout
 - 📍  **Pickup point delivery** with list and interactive map selection
-- 🧾  **Automatic order creation** in Apiship with selected tariff and pickup point
+- 🧾  **Automatic order creation** in ApiShip with selected tariff and pickup point
 - 🏷️  **Shipment documents retrieval**, including labels and waybills
 - ⚙️  **Test mode** for simulating calculations  
 - 🔍  **Detailed logging** for monitoring, debugging, and support
