--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/getting-started/en.mdx
@@ -11,7 +11,7 @@ In this document, you’ll learn how to install and configure the ApiShip fulfil
 
 - Medusa v2.7.1 or later
 - Node.js v20 or later
-- An Apiship account - [sign in or create one](https://a.apiship.ru)
+- An ApiShip account - [sign in or create one](https://a.apiship.ru)
 
 ## Installation
 
@@ -85,14 +85,14 @@ APISHIP_TOKEN=supersecret
 
 | Option | Description | Required | Default |
 | --- | --- | --- | --- |
-| `token` | Apiship API token. | Yes | – |
-| `isTest` | Enables test mode for Apiship API requests. | No | `false` |
+| `token` | ApiShip API token. | Yes | – |
+| `isTest` | Enables test mode for ApiShip API requests. | No | `false` |
 | `settings` | Provider settings object. | Yes | – |
 | `settings.defaultSenderSettings.countryCode` | Sender country code. | Yes | – |
 | `settings.defaultSenderSettings.addressString` | Sender full address as a single string. | Yes | – |
 | `settings.defaultSenderSettings.contactName` | Sender contact full name. | Yes | – |
 | `settings.defaultSenderSettings.phone` | Sender contact phone number. | Yes | – |
-| `settings.connectionsMap` | Mapping of delivery provider keys to Apiship connection IDs. | No | – |
+| `settings.connectionsMap` | Mapping of delivery provider keys to ApiShip connection IDs. | No | – |
 | `settings.defaultProductSizes.length` | Default product length. | No | – |
 | `settings.defaultProductSizes.width` | Default product width. | No | – |
 | `settings.defaultProductSizes.height` | Default product height. | No | – |
