--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/apiship/ru.mdx
@@ -9,10 +9,10 @@ description: "Плагин Medusa для фулфилмента через ApiSh
 
 ## Возможности
 
-- 🔗  **Бесшовная интеграция** с логистической платформой Apiship  
-- 💰  **Расчёт стоимости доставки в реальном времени** прямо на этапе оформления заказа  
-- 📍  **Доставка в пункт выдачи** со списком ПВЗ и выбором на интерактивной карте  
-- 🧾  **Автоматическое создание заказа** в Apiship с выбранным тарифом и пунктом выдачи  
+- ✅  **Полноценная интеграция** с ApiShip  
+- 💰  **Расчёт стоимости доставки** на этапе оформления заказа  
+- 📍  **Доставка в пункты выдачи** с выбором ПВЗ из списка и на интерактивной карте  
+- 🧾  **Автоматическое создание заказа** в ApiShip с выбранным тарифом и пунктом выдачи  
 - 🏷️  **Получение отгрузочных документов**, включая этикетки и накладные  
 - ⚙️  **Тестовый режим** для симуляции расчётов  
 - 🔍  **Подробное логирование** для мониторинга, отладки и поддержки
