--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/en.mdx
@@ -11,7 +11,7 @@ When Robokassa is selected, the storefront should call `initiatePayment` with th
 
 Once the payment is completed, Robokassa will concurrently send a webhook and redirect the customer back to the storefront. Whichever arrives first will complete the cart and create a new order in Medusa.
 
-For the Next.js start you need to make the following changes:
+For the storefront on Next.js, you need to make the following changes:
 
 ## 1. Payment Provider Configuration
 
