--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
@@ -11,13 +11,15 @@ description: "Узнайте, как интегрировать платежны
 
 После завершения оплаты ЮKassa одновременно отправит вебхук и перенаправит покупателя обратно в витрину. То событие, которое придёт первым, завершит корзину и создаст новый заказ в Medusa.
 
+В storefront на Next.js необходимо внести следующие изменения:
+
 ## 1. Конфигурация платежного провайдера
 
 Чтобы сделать ЮKassa доступным в качестве способа оплаты на странице оформления заказа витрины магазина, необходимо добавить её конфигурацию в маппинг платёжных провайдеров в файле с константами вашего storefront. Этот маппинг определяет как каждый провайдер отображается в интерфейсе.
 
 Откройте [`src/lib/constants.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/bce2e01d8932b3c09b66a3a1b06aa1d5c4cfc445/examples/medusa-storefront/src/lib/constants.tsx#L33-L36) и добавьте следующий код:
 
-![Структура проекта storefront Medusa после обновления файла с константами](https://github.com/user-attachments/assets/0aee001e-958f-40c6-b329-618e318ff019)
+![Структура проекта Medusa Storefront после обновления файла с константами](https://github.com/user-attachments/assets/0aee001e-958f-40c6-b329-618e318ff019)
 
 ```ts
 export const paymentInfoMap: Record<
@@ -48,7 +50,7 @@ export const isYookassa = (providerId?: string) => {
 
 Откройте [`src/lib/data/cookies.ts`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/bce2e01d8932b3c09b66a3a1b06aa1d5c4cfc445/examples/medusa-storefront/src/lib/data/cookies.ts#L75) и обновите конфигурацию файлов cookie следующим образом:
 
-![Структура проекта storefront Medusa после обновления файлов cookie](https://github.com/user-attachments/assets/4274d249-6994-4d9f-b4b6-98f2016f0e9f)
+![Структура проекта Medusa Storefront после обновления файлов cookie](https://github.com/user-attachments/assets/4274d249-6994-4d9f-b4b6-98f2016f0e9f)
 
 ```ts
 export const setCartId = async (cartId: string) => {
@@ -69,7 +71,7 @@ export const setCartId = async (cartId: string) => {
 
 Откройте [`src/modules/checkout/components/payment/index.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/main/examples/medusa-storefront/src/modules/checkout/components/payment/index.tsx#L87-L96) и обновите логику инициализации платежа, включив в нее данные корзины и URL возврата для ЮKassa:
 
-![Directory structure in the Medusa Storefront after updating the file for payment component](https://github.com/user-attachments/assets/5c4dfcf9-57e7-48f6-956c-0e0a91ec6c8f)
+![Структура проекта Medusa Storefront после обновления файла для компонента оплаты](https://github.com/user-attachments/assets/5c4dfcf9-57e7-48f6-956c-0e0a91ec6c8f)
 
 ```ts
 await initiatePaymentSession(cart, {
@@ -96,7 +98,7 @@ await initiatePaymentSession(cart, {
 
 Откройте [`src/modules/checkout/components/payment-button/index.tsx`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/bce2e01d8932b3c09b66a3a1b06aa1d5c4cfc445/examples/medusa-storefront/src/modules/checkout/components/payment-button/index.tsx#L205-L247) и добавьте следующий код:
 
-![Структура проекта storefront Medusa после обновления файла для компонента кнопки оплаты](https://github.com/user-attachments/assets/4b76ee52-747f-452e-9160-6365f742e33e)
+![Структура проекта Medusa Storefront после обновления файла для компонента кнопки оплаты](https://github.com/user-attachments/assets/4b76ee52-747f-452e-9160-6365f742e33e)
 
 ```ts
 const PaymentButton: React.FC<PaymentButtonProps> = ({
@@ -178,7 +180,7 @@ const YookassaPaymentButton = ({
 
 Создайте файл [`src/app/api/capture-payment/[cartId]/route.ts`](https://github.com/sergkoudi/medusa-payment-yookassa/blob/main/examples/medusa-storefront/src/app/api/capture-payment/%5BcartId%5D/route.ts)  со следующим содержимым:
 
-![Структура проекта storefront Medusa после создания файла для API route](https://github.com/user-attachments/assets/89ac89de-62ad-4b6c-af61-ab6299587dbf)
+![Структура проекта Medusa Storefront после создания файла для API route](https://github.com/user-attachments/assets/89ac89de-62ad-4b6c-af61-ab6299587dbf)
 
 ```ts
 import { NextRequest, NextResponse } from "next/server"
